# kif

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: playbook_registry.yaml  settings.py
kestrel/agents/: base_agent.py  grc_agent.py  meta_agent.py  secops_agent.py
kestrel/connectors/: base_connector.py
kestrel/core/: engine.py  memory_manager.py  orchestrator.py  task_queue.py
kestrel/domain_models/: asset.py  event.py  identity.py  vulnerability.py
kestrel/tools/: base_tool.py
